# Mathter

./: CMakeLists.txt
cmake/: install-config.cmake  install-rules.cmake  warning-guard.cmake
include/Mathter/: CMakeLists.txt
